@@ -35,6 +35,11 @@ Changes Since 0.9.1
 
   - Fix [ 3546533 ] Unicode error with `date` directive.
 
+* docutils/writers/html4css1/__init__.py
+
+  - Use ``<code>`` tag for inline "code",
+    do not drop nested inline nodes (syntax highlight tokens).
+
 * docutils/tools/test/test_buildhtml.py
 
   - Fix [ 3521167 ] allow running in any directory.
